# copysl

./: .gitignore  Cargo.toml  README.md
src/: daemonization.rs  gui.rs  inputs.rs  keyboard_obs.rs  lib.rs  main.rs  system.rs  system.rs.archived  ui.rs
